--- a/src/app/components/home-cliente/home-cliente.component.html
+++ b/src/app/components/home-cliente/home-cliente.component.html
@@ -1,1 +1,14 @@
-<p>home-cliente works!</p>
+<div>
+    <google-map height="700px"
+            width="400px"
+            [center]="center"
+            [zoom]="zoom"
+            (mapClick)="moveMap($event)"
+            (mapMousemove)="move($event)">
+    </google-map>
+</div>
+
+<div style="display: flex; justify-content: center; margin-top: 60px;">
+    <button mat-raised-button color="primary">Atendimento</button>
+    <button mat-raised-button color="accent" style="margin-left: 66px;">Seu Perfil</button>
+</div>
