Tela de menu do cliente

--- a/src/app/components/home-cliente/home-cliente.component.html
+++ b/src/app/components/home-cliente/home-cliente.component.html
@@ -9,6 +9,6 @@
 </div>
 
 <div style="display: flex; justify-content: center; margin-top: 60px;">
-    <button mat-raised-button color="primary">Atendimento</button>
+    <button mat-raised-button color="primary" (click)="MenuCliente()" >Atendimento</button>
     <button mat-raised-button color="accent" style="margin-left: 66px;">Seu Perfil</button>
 </div>
