Tela de Acompanhamento de Solicitação do Cliente

--- a/src/app/components/menu-cliente/menu-cliente.component.html
+++ b/src/app/components/menu-cliente/menu-cliente.component.html
@@ -14,7 +14,7 @@
 
         <div style="width: 160px; width: 160px;
         height: 123px; display: flex; flex-direction: column; justify-content: center; align-items: center; margin-right: 15px; background-color: #46464654;
-        border-radius: 17px;">
+        border-radius: 17px;" (click)="AcompanhamentoSolicitacao()">
 
             <img style="margin-top: 9px;
             width: 77px;
@@ -27,7 +27,7 @@
 
         <div style="width: 160px; width: 160px;
         height: 123px; display: flex; flex-direction: column; justify-content: center; align-items: center; background-color: #46464654;
-        border-radius: 17px;">
+        border-radius: 17px;" (click)="AcompanhamentoSolicitacao()">
 
             <img style="margin-top: 9px;
             width: 77px;
@@ -45,7 +45,7 @@
 
         <div style="width: 160px; width: 160px;
         height: 123px; display: flex; flex-direction: column; justify-content: center; align-items: center; margin-right: 15px; background-color: #46464654;
-        border-radius: 17px;">
+        border-radius: 17px;" (click)="AcompanhamentoSolicitacao()">
 
             <img style="margin-top: 9px;
             width: 77px;
@@ -58,7 +58,7 @@
 
         <div style="width: 160px; width: 160px;
         height: 123px; display: flex; flex-direction: column; justify-content: center; align-items: center; background-color: #46464654;
-        border-radius: 17px;">
+        border-radius: 17px;" (click)="AcompanhamentoSolicitacao()">
 
             <img style="margin-top: 9px;
             width: 77px;
@@ -75,7 +75,7 @@
 
         <div style="width: 160px; width: 160px;
         height: 123px; display: flex; flex-direction: column; justify-content: center; align-items: center; margin-right: 15px; background-color: #46464654;
-        border-radius: 17px;">
+        border-radius: 17px;" (click)="AcompanhamentoSolicitacao()">
 
             <img style="margin-top: 9px;
             width: 77px;
@@ -88,7 +88,7 @@
 
         <div style="width: 160px; width: 160px;
         height: 123px; display: flex; flex-direction: column; justify-content: center; align-items: center; background-color: #46464654;
-        border-radius: 17px;">
+        border-radius: 17px;" (click)="AcompanhamentoSolicitacao()">
 
             <img style="margin-top: 9px;
             width: 77px;
