Tela de aguardar serviço

--- a/src/app/components/preco-servico/preco-servico.component.html
+++ b/src/app/components/preco-servico/preco-servico.component.html
@@ -16,7 +16,7 @@
     <div style="margin-top: 32px;
     width: 316px;
     height: 367px;
-    background-color: rgb(101, 101, 101);">
+    background-color: rgb(101, 101, 101); border-radius: 11px;">
     
         <div style="display: flex; flex-direction: column; margin-top: 22px; display: flex;
         justify-content: center;">
@@ -50,7 +50,7 @@
         justify-content: center;
         margin-top: 15px;">
             <button mat-raised-button color="accent" style="    background-color: green;
-            margin-right: 17px;">Aceitar</button>
+            margin-right: 17px;" (click)="AguardarServico()">Aceitar</button>
             <button mat-raised-button color="warn">Recusar</button>
         </div>
 
