--- a/src/app/components/servico-finalizado/servico-finalizado.component.html
+++ b/src/app/components/servico-finalizado/servico-finalizado.component.html
@@ -32,7 +32,7 @@ justify-content: center;">
         margin-top: 29px;">
             <button mat-raised-button color="accent" style="    background-color: green;
             margin-right: 17px;" (click)="HomeCliente()">Confirmar</button>
-            <button mat-raised-button color="warn">S.O.S</button>
+            <button (click)="Sos()" mat-raised-button color="warn">S.O.S</button>
         </div>
 
         <p style="margin-left: 9px;
