Funcionalidade de logar e cadastrar.

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -10,7 +10,7 @@ body{
 }
 .main{
 	width: 350px;
-	height: 610px;
+	height: 678px;
 	background: red;
 	overflow: hidden;
 	background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/ cover;
@@ -47,6 +47,7 @@ input{
 	outline: none;
 	border-radius: 5px;
 }
+
 button{
 	width: 60%;
 	height: 40px;
@@ -90,3 +91,8 @@ button:hover{
 	transform: scale(.6);
 }
 
+
+.mat-form-field-flex ng-tns-c71-0{
+	width: 239px;
+	background-color: #e0dede;
+}
