--- a/src/app/components/servico-finalizado/servico-finalizado.component.html
+++ b/src/app/components/servico-finalizado/servico-finalizado.component.html
@@ -31,7 +31,7 @@ justify-content: center;">
         justify-content: center;
         margin-top: 29px;">
             <button mat-raised-button color="accent" style="    background-color: green;
-            margin-right: 17px;" (click)="HomeCliente()">Confirmar</button>
+            margin-right: 17px;" (click)="AvaliarServico()">Confirmar</button>
             <button (click)="Sos()" mat-raised-button color="warn">S.O.S</button>
         </div>
 
