--- a/src/app/components/opcoes/opcoes.component.html
+++ b/src/app/components/opcoes/opcoes.component.html
@@ -23,7 +23,7 @@
                     font-weight: bold;">Peça pelo serviço que você quer e te indicaremos um profissional.</p>
             </div>
 
-            <div (click)="HomeMecanico()" style="align-items: center;flex-direction: column;display: flex; justify-content: center; margin-top: 59px; cursor: pointer; width: 309px; height: 200px; background-color: rgb(167, 167, 167);">
+            <div (click)="CadastrarServico()" style="align-items: center;flex-direction: column;display: flex; justify-content: center; margin-top: 59px; cursor: pointer; width: 309px; height: 200px; background-color: rgb(167, 167, 167);">
                 <img style="
                     width: 54px;cursor: pointer;height: 54px; margin-top: -3px;" src="assets\cadastro.png">
                     
