--- a/src/app/components/servico-encontrado-dialog/servico-encontrado-dialog.component.html
+++ b/src/app/components/servico-encontrado-dialog/servico-encontrado-dialog.component.html
@@ -12,7 +12,7 @@
 
     </div>
     <div mat-dialog-actions>
-        <button mat-raised-button color="primary">Aceitar</button>
+        <button mat-raised-button mat-dialog-close color="primary" (click)="Aceitar()">Aceitar</button>
         <button mat-raised-button color="warn" (click)="Rejeitar()">Rejeitar</button>
     </div>
 </div>
