Funcionalidade de alterar perfil

--- a/src/app/components/home-mecanico/home-mecanico.component.html
+++ b/src/app/components/home-mecanico/home-mecanico.component.html
@@ -10,5 +10,5 @@
 
 <div style="display: flex; justify-content: center; margin-top: 60px;">
     <button mat-raised-button color="primary" (click)="BuscarServico()" >Atendimento</button>
-    <button mat-raised-button color="accent" style="margin-left: 66px;">Seu Perfil</button>
+    <button mat-raised-button color="accent" (click)="Perfil()" style="margin-left: 66px;">Seu Perfil</button>
 </div>
